--- a/public/about.html
+++ b/public/about.html
@@ -1,51 +1,69 @@
+<!-- public/about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>UniThrift - About</title>
   <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
     rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
   />
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <!-- Header (same style, but pointing to different pages) -->
   <header class="header">
     <div class="header-left">
-      <a href="index.html" style="text-decoration: none; color: inherit;">
+      <a href="index.html" style="text-decoration:none;color:inherit;">
         <div class="logo-section">
           <svg class="logo" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="45" fill="none" stroke="white" stroke-width="2"/>
             <circle cx="35" cy="40" r="3" fill="white"/>
             <circle cx="65" cy="40" r="3" fill="white"/>
             <ellipse cx="50" cy="50" rx="8" ry="6" fill="white"/>
-            <path d="M 20 50 Q 50 70 80 50" fill="none" stroke="white" stroke-width="2"/>
+            <path d="M20 50 Q50 70 80 50" fill="none" stroke="white" stroke-width="2"/>
           </svg>
         </div>
       </a>
-      <nav class="nav-links">
+      <nav class="nav-links" id="navLinks">
         <a href="categories.html" class="nav-link">Categories</a>
         <a href="business.html" class="nav-link">Business</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="leaderboard.html" class="nav-link">Leaderboard</a>
       </nav>
     </div>
-    <div class="header-right">
-      <button class="auth-button login-btn" id="openLoginModal">Log in</button>
-      <button class="auth-button signup-btn" id="openSignupModal">Sign up</button>
+    <div class="header-right" id="headerRight">
+      <!-- This is dynamically updated in scripts.js (My Profile / Log Out or Log In / Sign Up) -->
     </div>
   </header>
 
-  <!-- Simple content for this page -->
-  <main style="padding: 90px 30px;">
-    <h1 style="color: #000">Categories Page</h1>
-    <p style="color: #000">Show or filter items by category here.</p>
+  <main class="main-content" style="flex-direction:column; padding:80px 24px;">
+    <h1 style="color:#fff; margin-bottom:20px;">About UniThrift</h1>
+    <p style="color:#ddd; max-width:600px;">
+      UniThrift is a dedicated marketplace for college students to buy and sell items.
+      From textbooks to dorm furniture, we connect students with local deals and
+      help them earn money from second-hand goods. 
+    </p>
+    <p style="color:#ddd; max-width:600px;">
+      Our mission is to create a sustainable campus community by encouraging reuse
+      and reducing waste.
+    </p>
+
+    <div id="aboutExtraSection" style="margin-top:20px;">
+      <!-- We'll do a small demonstration of JS here. -->
+      <button class="search-button" onclick="showFunFact()">Show a Fun Fact</button>
+      <p id="funFact" style="color:#aaa; margin-top:10px;"></p>
+    </div>
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="scripts.js"></script>
+  <script>
+    function showFunFact() {
+      document.getElementById("funFact").innerText =
+        "Over 80% of college students have purchased at least one used item from a peer!";
+    }
+  </script>
 </body>
 </html>
