--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -1,51 +1,85 @@
+<!-- public/leaderboard.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>UniThrift - Leaderboard</title>
   <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
     rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
   />
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <!-- Header (same style, but pointing to different pages) -->
   <header class="header">
     <div class="header-left">
-      <a href="index.html" style="text-decoration: none; color: inherit;">
+      <a href="index.html" style="text-decoration:none;color:inherit;">
         <div class="logo-section">
           <svg class="logo" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="45" fill="none" stroke="white" stroke-width="2"/>
             <circle cx="35" cy="40" r="3" fill="white"/>
             <circle cx="65" cy="40" r="3" fill="white"/>
             <ellipse cx="50" cy="50" rx="8" ry="6" fill="white"/>
-            <path d="M 20 50 Q 50 70 80 50" fill="none" stroke="white" stroke-width="2"/>
+            <path d="M20 50 Q50 70 80 50" fill="none" stroke="white" stroke-width="2"/>
           </svg>
         </div>
       </a>
-      <nav class="nav-links">
+      <nav class="nav-links" id="navLinks">
         <a href="categories.html" class="nav-link">Categories</a>
         <a href="business.html" class="nav-link">Business</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="leaderboard.html" class="nav-link">Leaderboard</a>
       </nav>
     </div>
-    <div class="header-right">
-      <button class="auth-button login-btn" id="openLoginModal">Log in</button>
-      <button class="auth-button signup-btn" id="openSignupModal">Sign up</button>
-    </div>
+    <div class="header-right" id="headerRight"></div>
   </header>
 
-  <!-- Simple content for this page -->
-  <main style="padding: 90px 30px;">
-    <h1 style="color: #000">Categories Page</h1>
-    <p style="color: #000">Show or filter items by category here.</p>
+  <main class="main-content" style="flex-direction:column; padding:80px 24px;">
+    <h1 style="color:#fff; margin-bottom:20px;">Top Thrifters</h1>
+    <p style="color:#ccc; max-width:600px;">
+      See who has completed the most transactions and achieved the highest thrifting ranks!
+    </p>
+    <button class="search-button" style="max-width:200px;" onclick="loadLeaderboard()">Load Leaderboard</button>
+
+    <table style="margin-top:20px; color:#fff; border-collapse: collapse;">
+      <thead>
+        <tr>
+          <th style="padding:8px;border-bottom:1px solid #777;">Rank</th>
+          <th style="padding:8px;border-bottom:1px solid #777;">User</th>
+          <th style="padding:8px;border-bottom:1px solid #777;">Transactions</th>
+          <th style="padding:8px;border-bottom:1px solid #777;">Total Value</th>
+        </tr>
+      </thead>
+      <tbody id="leaderboardBody"></tbody>
+    </table>
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="scripts.js"></script>
+  <script>
+    async function loadLeaderboard() {
+      try {
+        const res = await fetch("/api/extra/leaderboard");
+        const data = await res.json();
+        const tbody = document.getElementById("leaderboardBody");
+        tbody.innerHTML = "";
+        data.forEach((entry, idx) => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td style="padding:8px;border-bottom:1px solid #444;">${entry.rank}</td>
+            <td style="padding:8px;border-bottom:1px solid #444;">${entry.fullName || "Unknown"}</td>
+            <td style="padding:8px;border-bottom:1px solid #444;">${entry.totalTransactions}</td>
+            <td style="padding:8px;border-bottom:1px solid #444;">$${entry.totalValue.toFixed(2)}</td>
+          `;
+          tbody.appendChild(tr);
+        });
+      } catch(err) {
+        console.error(err);
+        alert("Failed to load leaderboard");
+      }
+    }
+  </script>
 </body>
 </html>
