--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
   <script src="scripts.js"></script>
   <!-- Google Maps -->
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdPyD4VPA4b24sLkX1YdYbl7fx2-x6vTY&libraries=places&callback=initMap"
+    src="https://maps.googleapis.com/maps/api/js?key=MYKEY&libraries=places&callback=initMap"
     async
     defer
   ></script>
